Fixed artstation results not showing when searching

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -59,6 +59,8 @@ body
 
     color:white;
 
+    cursor: pointer; 
+
     
     #preview-close
     {
